Major presentation content updates and improvements
- Updated research_vessels_slide.html: Changed title to 'Twilight Zone Discovery', added Schmidt Ocean Institute header and navigation menu
- Enhanced all presentation slides with improved content and navigation
- Refined visual elements and user interface across multiple slides
- Maintained consistent theming and scientific accuracy throughout presentation
- Ready for comprehensive deep sea discovery presentation

--- a/index.html
+++ b/index.html
@@ -439,73 +439,16 @@
 
         <div class="container">
             <div class="header">
-                <h1 class="main-title">A TWILIGHT ZONE DISCOVERY</h1>
-                <p class="subtitle">Interactive Presentation</p>
-                <p class="event-info">Colossal Squid: First Live Footage • March 9, 2025</p>
+                <h1>Schmidt Ocean Institute: A Deep Sea Expedition</h1>
             </div>
-
-            <div class="slides-grid">
-<div class="slide-card">
-    <div class="slide-number">SLIDE 00</div>
-    <h2 class="slide-title">🚢 RESEARCH VESSELS</h2>
-    <p class="slide-description">
-        Fleet overview and journey to ROV drop site.
-    </p>
-    <a href="research_vessels_slide.html" class="slide-link">EXPLORE FLEET →</a>
-</div>
-                <div class="slide-card">
-                    <div class="slide-number">SLIDE 01</div>
-                    <h2 class="slide-title">🔒 CLASSIFIED INTRO</h2>
-                    <p class="slide-description">
-                        Mission briefing and classified parameters.
-                    </p>
-                    <a href="figma_intro_slide.html" class="slide-link">ENTER BRIEFING →</a>
-                </div>
-
-                <div class="slide-card">
-                    <div class="slide-number">SLIDE 02</div>
-                    <h2 class="slide-title">🌊 OCEAN DESCENT</h2>
-                    <p class="slide-description">
-                        Interactive journey through ocean zones.
-                    </p>
-                    <a href="figma_descent_slide.html" class="slide-link">BEGIN DESCENT →</a>
-                </div>
-
-                <div class="slide-card">
-                    <div class="slide-number">SLIDE 03</div>
-                    <h2 class="slide-title">🦑 FIRST ENCOUNTER</h2>
-                    <p class="slide-description">
-                        First contact with specimen.
-                    </p>
-                    <a href="encounter_slide.html" class="slide-link">WITNESS ENCOUNTER →</a>
-                </div>
-
-                <div class="slide-card">
-                    <div class="slide-number">SLIDE 04</div>
-                    <h2 class="slide-title">🎥 CLASSIFIED FOOTAGE</h2>
-                    <p class="slide-description">
-                        Recorded footage of encounter.
-                    </p>
-                    <a href="video_encounter_slide.html" class="slide-link">VIEW FOOTAGE →</a>
-                </div>
-
-                <div class="slide-card">
-                    <div class="slide-number">SLIDE 05</div>
-                    <h2 class="slide-title">🔬 BIOLOGICAL ANALYSIS</h2>
-                    <p class="slide-description">
-                        Scientific analysis and threat assessment.
-                    </p>
-                    <a href="analysis_slide.html" class="slide-link">VIEW ANALYSIS →</a>
-                </div>
-
-                <div class="slide-card">
-                    <div class="slide-number">SLIDE 06</div>
-                    <h2 class="slide-title">⚠️ EMERGENCY ASCENT</h2>
-                    <p class="slide-description">
-                        Hull breach protocol activated.
-                    </p>
-                    <a href="escape_slide.html" class="slide-link">INITIATE ESCAPE →</a>
-                </div>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="research_vessels_slide.html">The Vessel</a>
+                <a href="figma_descent_slide.html">The ROV</a>
+                <a href="encounter_slide.html">First Contact</a>
+                <a href="video_encounter_slide.html">The Footage</a>
+                <a href="analysis_slide.html">Analysis</a>
+                <a href="escape_slide.html">Significance</a>
             </div>
 
             <div class="footer">
