--- a/research_vessels_slide.html
+++ b/research_vessels_slide.html
@@ -277,19 +277,17 @@
 
         <!-- Main content -->
         <div class="container">
-            <h1 class="title">RESEARCH VESSELS</h1>
-            <h2 class="subtitle">MISSION FLEET & JOURNEY SIMULATION</h2>
-
-            <div class="vessel-info">
-                <div class="info-box">
-                    <div class="info-label">Primary Vessel</div>
-                    <div class="info-value">RV Deep Explorer - Length: 85m, Crew: 45, Max Speed: 15 knots</div>
-                </div>
-                <div class="info-box">
-                    <div class="info-label">ROV Substation</div>
-                    <div class="info-value">Substation ROV - Depth Rating: 6000m, Equipped with HD Cameras and Sensors
-                    </div>
-                </div>
+            <div class="header">
+                <h1>Schmidt Ocean Institute: A Deep Sea Expedition</h1>
+            </div>
+            <div class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="research_vessels_slide.html">The Vessel</a>
+                <a href="figma_descent_slide.html">The ROV</a>
+                <a href="encounter_slide.html">First Contact</a>
+                <a href="video_encounter_slide.html">The Footage</a>
+                <a href="analysis_slide.html">Analysis</a>
+                <a href="escape_slide.html">Significance</a>
             </div>
 
             <div id="map"></div>
