--- a/video_encounter_slide.html
+++ b/video_encounter_slide.html
@@ -620,49 +620,17 @@
         <!-- Main content -->
         <div class="container">
             <div class="video-container">
-                <div class="video-header">
-                    <div class="video-title">FIRST CONTACT FOOTAGE</div>
-                    <div class="timestamp">09:42:17 GMT • LIVE FEED</div>
+                <div class="header">
+                    <h1>Schmidt Ocean Institute: A Deep Sea Expedition</h1>
                 </div>
-
-                <div class="video-wrapper">
-                    <video class="main-video" id="mainVideo" controls preload="metadata">
-                        <source src="giantsquid.mp4" type="video/mp4">
-                        <source src="squid_encounter.webm" type="video/webm">
-                        <source src="squid_encounter.mov" type="video/quicktime">
-                        <div class="video-fallback">
-                            <h3 style="color: #FF4500; margin-bottom: 15px;">📹 VIDEO FILE REQUIRED</h3>
-                            <p style="color: #E3F2FD; line-height: 1.6;">
-                                To display your giant squid encounter footage:<br><br>
-                                1. Place your video file in the project directory<br>
-                                2. Rename it to <code style="color: #00E5FF;">squid_encounter.mp4</code><br>
-                                3. Refresh this page<br><br>
-                                Supported formats: MP4, WebM, MOV
-                            </p>
-                        </div>
-                    </video>
-
-                    <!-- Data overlays -->
-                    <div class="video-overlays">
-                        <div class="depth-gauge">
-                            <div>DEPTH</div>
-                            <div class="depth-value">1,968 ft</div>
-                        </div>
-
-                        <div class="coordinates-overlay">
-                            LAT: -57.75°S<br>
-                            LON: -26.50°W<br>
-                            BEARING: 127°
-                        </div>
-
-                        <div class="mission-timer">
-                            REC: <span id="recordingTime">00:00:00</span>
-                        </div>
-
-                        <div class="threat-indicator">
-                            THREAT LEVEL: HIGH
-                        </div>
-                    </div>
+                <div class="nav-links">
+                    <a href="index.html">Home</a>
+                    <a href="research_vessels_slide.html">The Vessel</a>
+                    <a href="figma_descent_slide.html">The ROV</a>
+                    <a href="encounter_slide.html">First Contact</a>
+                    <a href="video_encounter_slide.html">The Footage</a>
+                    <a href="analysis_slide.html">Analysis</a>
+                    <a href="escape_slide.html">Significance</a>
                 </div>
 
                 <!-- Custom controls -->
