--- a/figma_descent_slide.html
+++ b/figma_descent_slide.html
@@ -421,10 +421,18 @@
     </div>
     
     <!-- Main title overlay -->
-    <div class="title-overlay">
-        <h1 class="main-title">THE ABYSS AWAITS</h1>
-        <p class="subtitle">95% UNEXPLORED</p>
-    </div>
+   <div class="header">
+       <h1>Schmidt Ocean Institute: A Deep Sea Expedition</h1>
+   </div>
+   <div class="nav-links">
+       <a href="index.html">Home</a>
+       <a href="research_vessels_slide.html">The Vessel</a>
+       <a href="figma_descent_slide.html">The ROV</a>
+       <a href="encounter_slide.html">First Contact</a>
+       <a href="video_encounter_slide.html">The Footage</a>
+       <a href="analysis_slide.html">Analysis</a>
+       <a href="escape_slide.html">Significance</a>
+   </div>
     
     <!-- Mystery statistic -->
     <div class="mystery-stat">
