Reorganize repository structure with logical folders
✨ NEW FOLDER STRUCTURE:
- slides/ - All presentation HTML files
- assets/images/ - Ship and ROV images
- assets/videos/ - Giant squid footage
- docs/ - Documentation and development notes

🔧 UPDATED NAVIGATION:
- Updated index.html links to point to slides/ folder
- Fixed research vessels slide image path to ../assets/images/
- Updated navigation links for proper relative paths

📁 ORGANIZED FILES:
- 7 slide files moved to slides/
- 2 images moved to assets/images/
- 1 video moved to assets/videos/
- 3 documentation files moved to docs/

This creates a much cleaner, more maintainable project structure.

--- a/slides/research_vessels_slide.html
+++ b/slides/research_vessels_slide.html
@@ -294,7 +294,7 @@
         </div>
 
         <!-- Navigation -->
-        <a href="index.html" class="nav-back">← BACK TO INDEX</a>
+        <a href="../index.html" class="nav-back">← BACK TO INDEX</a>
 
         <script>
             // Leaflet.js map setup
@@ -312,7 +312,7 @@
 
             // Vessel marker
             const vesselIcon = L.icon({
-                iconUrl: 'falkortoo.jpg',
+                iconUrl: '../assets/images/falkortoo.jpg',
                 iconSize: [50, 32],
                 iconAnchor: [25, 16]
             });
