--- a/slides/video_encounter_slide.html
+++ b/slides/video_encounter_slide.html
@@ -624,7 +624,7 @@
                     <h1>Schmidt Ocean Institute: A Deep Sea Expedition</h1>
                 </div>
                 <div class="nav-links">
-                    <a href="index.html">Home</a>
+                    <a href="../index.html">Home</a>
                     <a href="research_vessels_slide.html">The Vessel</a>
                     <a href="figma_descent_slide.html">The ROV</a>
                     <a href="encounter_slide.html">First Contact</a>
