--- a/index.html
+++ b/index.html
@@ -443,12 +443,12 @@
             </div>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="research_vessels_slide.html">The Vessel</a>
-                <a href="figma_descent_slide.html">The ROV</a>
-                <a href="encounter_slide.html">First Contact</a>
-                <a href="video_encounter_slide.html">The Footage</a>
-                <a href="analysis_slide.html">Analysis</a>
-                <a href="escape_slide.html">Significance</a>
+                <a href="slides/research_vessels_slide.html">The Vessel</a>
+                <a href="slides/figma_descent_slide.html">The ROV</a>
+                <a href="slides/encounter_slide.html">First Contact</a>
+                <a href="slides/video_encounter_slide.html">The Footage</a>
+                <a href="slides/analysis_slide.html">Analysis</a>
+                <a href="slides/escape_slide.html">Significance</a>
             </div>
 
             <div class="footer">
